lab1/Test/L1-A-7-1.output
Error Type A at Line 8
Error Type A at Line 12
Error Type A at Line 13
Error Type A at Line 23
Error Type A at Line 27
