lab1/Test/L1-A-7-1.cmm
struct {
  int GiEKWT = c2fytNwXn6OQKAK = Z3rNFluvqmfqBGB || 
    mXB6zjrW && pOoaTF0FL >= amAjV7hvMjC82tI - hSiXlY 
    / zBzSCrcpTubn6 [ LUW6GCphwdA87gWfF < goWbQwc5 + UbYg_z4pFTZ5 
    ( pA , rJ6KJgvmQ || OlazrqmM6148 == BOnQMBkCA - - 
    ( dr != aCBCI ( iLSTttPJ = L || GOcRnm7cg0Xp && rqp7TbXbM 
    <= - 1140290807.649804271 ) ) . qJ - ! ! NvqlI7g1miiLuA_b1x5 
    ) ] * ! - nn_OYTkVKy3 ( ) . ThZxQhfxue \> 2030168255 
    ;
}Dj , oNIi [ 1294756389 ] 

:;
int 'TKWho4Vkox8WoMqB ( ) {
}
int ;
int DnZx8LjGeFhtlgx ( int KrikQ , int n1a2thl9 ) {
  int VoPBsf ;
  int o_ ;
  struct f8Hv {
  }CQ ;
  struct xKAxlmgH9F _ODGwyw45zI ;
  struct wa RLAuzQaYHLU8ceRHp ;
`  int Xz7T ;
  if ( J7_rrDRjC1uPjUkwP6 )   if ( gkXjn ) {
    float uB9YVoHdp7ZRKY0sG , DVHugWh5evx ;
  }else   while ( X7KzyYN6Rd3WiYRuHpq )   return VWqZ6bNp8F_VSba5j 
    ;^


else   if ( WYS1422ojShVHv )   jMnOfXKuKzQL6CuY ;


}
